--- a/public/category.html
+++ b/public/category.html
@@ -69,22 +69,22 @@
                 <ul>
                     <li> 부품교체
                         <ul>
-                            <li><button class="car tire">타이어</button></li>
-                            <li><button class="car oil">오일</button></li>
-                            <li><button class="car filter">필터</button></li>
-                            <li><button class="car break">브레이크 패드</button></li>
+                            <li><button class="car-repair tire">타이어</button></li>
+                            <li><button class="car-repair oil">오일</button></li>
+                            <li><button class="car-repair filter">필터</button></li>
+                            <li><button class="car-repair break">브레이크 패드</button></li>
                         </ul>
                     </li>
                     <li> 자동차 검사
                         <ul>
-                            <li><button class="car full-test">전체검사</button></li>
-                            <li><button class="car test">전체검사</button></li>
+                            <li><button class="car-repair full-test">전체검사</button></li>
+                            <li><button class="car-repair test">전체검사</button></li>
                         </ul>
                     </li>
                     <li> 세차 및 도색
                         <ul>
-                            <li><button class="car wash">세차</button></li>
-                            <li><button class="car paint">도색</button></li>
+                            <li><button class="car-repair wash">세차</button></li>
+                            <li><button class="car-repair paint">도색</button></li>
                         </ul>
                     </li>
                 </ul>
@@ -154,16 +154,16 @@
                 <ul>
                     <li> 펫시터
                         <ul>
-                            <li><button class="pet cat">탁묘, 탁견</button></li>
-                            <li><button class="pet visit">방문 돌봄</button></li>
-                            <li><button class="pet walk">산책</button></li>
-                            <li><button class="pet train">훈련</button></li>
+                            <li><button class="dog cat">탁묘, 탁견</button></li>
+                            <li><button class="dog visit">방문 돌봄</button></li>
+                            <li><button class="dog walk">산책</button></li>
+                            <li><button class="dog train">훈련</button></li>
                         </ul>
                     </li>
                     <li> 미용
                         <ul>
-                            <li><button class="pet visit-cut">방문 미용</button></li>
-                            <li><button class="pet cut">미용실</button></li>
+                            <li><button class="dog visit-cut">방문 미용</button></li>
+                            <li><button class="dog cut">미용실</button></li>
                         </ul>
                     </li>
                 </ul>
@@ -172,17 +172,17 @@
                 <ul>
                     <li> 방문청소
                         <ul>
-                            <li><button class="cleaning aircon">에어컨 청소</button></li>
-                            <li><button class="cleaning house">입주 청소</button></li>
-                            <li><button class="cleaning general">일반 청소</button></li>
-                            <li><button class="cleaning sewer">하수구 청소</button></li>
+                            <li><button class="clean aircon">에어컨 청소</button></li>
+                            <li><button class="clean house">입주 청소</button></li>
+                            <li><button class="clean general">일반 청소</button></li>
+                            <li><button class="clean sewer">하수구 청소</button></li>
                         </ul>
                     </li>
                     <li> 방역
                         <ul>
-                            <li><button class="cleaning cockroach">바퀴벌레</button></li>
-                            <li><button class="cleaning ant">개미</button></li>
-                            <li><button class="cleaning bug">그 외</button></li>
+                            <li><button class="clean cockroach">바퀴벌레</button></li>
+                            <li><button class="clean ant">개미</button></li>
+                            <li><button class="clean bug">그 외</button></li>
                         </ul>
                     </li>
                 </ul>
@@ -191,12 +191,12 @@
                 <ul>
                     <li> 스포츠 용역
                         <ul>
-                            <li><button class="sports soccer">축구</button></li>
-                            <li><button class="sports basketball">농구</button></li>
-                            <li><button class="sports baseball">야구</button></li>
-                            <li><button class="sports volleyball">배구</button></li>
-                            <li><button class="sports badminton">배드민턴</button></li>
-                            <li><button class="sports etc">기타</button></li>
+                            <li><button class="sport soccer">축구</button></li>
+                            <li><button class="sport basketball">농구</button></li>
+                            <li><button class="sport baseball">야구</button></li>
+                            <li><button class="sport volleyball">배구</button></li>
+                            <li><button class="sport badminton">배드민턴</button></li>
+                            <li><button class="sport etc">기타</button></li>
                         </ul>
                     </li>
                 </ul>
